tests/semantics/invalid/bad_condition.s23
int main();

code main {
    if ('1');
    if (2.0);
}